weather-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: weather
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: weather
    spec:
      containers:
      - name: weather
        image: shawnho1976/cicd:weather
        ports:
        - containerPort: 3000
