weather-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather
  labels:
    app: weather
    tier: frontend
spec:
  type: NodePort 
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: weather
