ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: weather-ingress
spec:
  rules:
  - http:
      paths:
      - path: 
        backend:
          serviceName: weather 
          servicePort: 3000
